Added extended filtering.
